2008-01-12  Cedric Scott <cedric@not2.be>
            Benny Malengier <benny.malengier@gramps-project.org>
	* data/man/gramps.1.in: new man file

2008-01-14 Peter Landgren <peter.talken@telia.com>
        * _DateDisplay.py: ISO-date shows only year if month=0 and day=0

2008-01-13 Jerome Rapinat <romjerome@yahoo.fr>
        * Makefile.am
        * configure.in: remove gramps.spec references

2008-01-13  Brian Matherly <brian@gramps-project.org>
	* src/PluginUtils/_MenuOptions.py: Code cleanup.

2008-01-13  Gary Burton <gary.burton@zen.co.uk>
	* src/ManagedWindow.py: Revert last change.

2008-01-13 Jerome Rapinat <romjerome@yahoo.fr>
        * gramps.spec.in: remove file
        * FAQ: update file (wiki data) #1457

2008-01-13 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/gramps_main.py: Add dots to list of things in Betawarning
	to make it consistent
	* src/GrampsLogger/_ErrorReportAssistant.py: Disable sending emails to the 
	bug list and add button to file bug report on gramps issue tracker
	
2008-01-12  Brian Matherly <brian@gramps-project.org>
	* src/gramps_main.py: Enable the beta warning on startup.

2008-01-12  Brian Matherly <brian@gramps-project.org>
	* src/plugins/GVHourGlass.py: Clean up PyLint warnings.

2008-01-12  Benny Malengier <benny.malengier@gramps-project.org>
	* src/GrampsDisplay.py: open url in standard way
	* src/gramps.py: add comment on use of import gnome
	* README:
	* INSTALL:
	Remove need for gconf, add need for xdg utilities

2008-01-12 Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/Config/__init__.py: revert wrong indentation changes

2008-01-12  Benny Malengier <benny.malengier@gramps-project.org>
	* src/const.py.in: new manual constant keys
	* src/GrampsDisplay.py: show wiki manual, allow webpage and 
		section to be passed
	RERUN ./autogen.sh

2008-01-12  Peter Landgren <peter.talken@telia.com>
    * src/ViewManager.py: partial fix for #1580. Work in DisplayState.py remains.
